--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <img style="margin-right: 20px" src="C:\Users\Cliente\.vscode\projeto5-batepapouol\Vector (1).png" alt="">
   </div>
    <div class="conteudo">
-     <div class="cinza"></div>
-     <div class="branca"></div>
-     <div class="rosa"></div>
+     
    </div>
 
     <div class="baixo">
-        <input style="border: none"   type="text" name="" id="">
+        <input  type="text" name="" id="">
         <img src="C:\Users\Cliente\.vscode\projeto5-batepapouol\Vector2.png" alt="">
     </div>
- 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+ <script src="projeto.js"></script>
+
 </body>
 </html>
