--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
    </div>
 
     <div class="baixo">
-        <input  type="text" name="" id="">
-        <img src="C:\Users\Cliente\.vscode\projeto5-batepapouol\Vector2.png" alt="">
+        <textarea class="caixatexto" type="text"></textarea>
+        <img onclick="enviarmsg()" src="C:\Users\Cliente\.vscode\projeto5-batepapouol\Vector2.png" alt="">
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
  <script src="projeto.js"></script>
